# SelfMediaTools

./: .gitignore  README.md  main.py  pyproject.toml  test_effects_standalone.py
.claude/skills/video-generator/: SKILL.md
.claude/skills/video-generator-publisher/: AGENTS.md  SKILL.md
.claude/skills/video-generator-publisher/agents/: config-agent.md  content-agent.md  publish-agent.md  video-agent.md
.claude/skills/video-generator-publisher/scripts/: config_helper.py
.claude/skills/video-generator/scripts/: config_helper.py
app_tests/: test_bgm_config.py  test_caption_style.py  test_cover_config.py  test_cover_first_frame.py  test_cover_render.py  test_flip_big_effects.py  test_pipeline_cover_integration.py  test_text_effects.py  test_text_split.py
configs/: 1.yaml  config.example.yaml  config.yaml
examples/: sample_input.txt
src/: bgm.py  ffmpeg_utils.py  io_utils.py  models.py  pipeline_main.py  render_cards.py  text_split.py  tts.py  video.py
